--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ NODE_ENV=development
 APP_NAME=AdonisJs
 APP_URL=http://${HOST}:${PORT}
 CACHE_VIEWS=false
-APP_KEY=wdB1H6s6rdizg0tkr9f3gk5k3nuo5BBL
+APP_KEY=
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
@@ -12,3 +12,8 @@ DB_USER=root
 DB_PASSWORD=
 DB_DATABASE=yusa
 HASH_DRIVER=bcrypt
+
+MAIL_HOST=smtp.mailtrap.io
+MAIL_CONNECTION=smtp
+MAIL_USERNAME=
+MAIL_PASSWORD=
